--- a/demo-portfolio-website.html
+++ b/demo-portfolio-website.html
@@ -53,7 +53,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#032506"/></svg>
-              <img src="./img/chibi drawing by Kashaan Mahmood.jpg" alt="chibi drawing">
+              <img src="./chibi drawing by Kashaan Mahmood.jpg" alt="chibi drawing">
 
               <div class="container">
                 <div class="carousel-caption">
@@ -65,7 +65,7 @@
             </div>
             <div class="carousel-item">
               <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#032506"/></svg>
-              <img src="./img/kk studio logo transparent bg.png" alt="old ">
+              <img src="./kk studio logo transparent bg.png" alt="old ">
 
               <div class="container">
                 <div class="carousel-caption">
@@ -76,7 +76,7 @@
             </div>
             <div class="carousel-item">
               <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#032506"/></svg>
-              <img src="./img/Untitled.png" alt="new-logo">
+              <img src="./Untitled.png" alt="new-logo">
               <div class="container">
                 <div class="carousel-caption">
                   <h1>Wear a mask</h1>
