--- a/demo-portfolio-website.html
+++ b/demo-portfolio-website.html
@@ -212,7 +212,7 @@
     <div class="container px-4 py-5 contactus">
       <h1>Contact Us</h1>
       <p>please feel free to inquire about our services !</p>
-      <form action="POST">
+      <form action="https://portfolio-62ecd-default-rtdb.firebaseio.com/" method="POST">
         <div class="top-row">
           <div class="first-element">
             <label for="firstname">First Name</label>
