--- a/demo-portfolio-website.html
+++ b/demo-portfolio-website.html
@@ -220,11 +220,11 @@
           </div>
           <div class="second-element">
             <label for="lastname">Last Name</label>
-            <input type="text" name="firstname" id="lastname">
+            <input type="text" name="lastname" id="lastname">
           </div>
           <div class="third-element">
             <label for="email">Email</label>
-            <input type="text" name="email" id="email"><br><br>
+            <input type="email" name="email" id="email"><br><br>
           </div>
         </div>
         
