--- a/demo-portfolio-website.html
+++ b/demo-portfolio-website.html
@@ -235,8 +235,8 @@
         <input id="submit" type="submit" value="Submit">
       </form>
     </div>
-
     
+    <script src="./Firebase.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
 
