added fontawesome and codeCademy link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/6ab29acc55.js" crossorigin="anonymous"></script>
         <script src="js/nav.js" defer></script>
         <script src="./js/typeWriter.js" defer></script>
+        <script src="https://kit.fontawesome.com/6ab29acc55.js" crossorigin="anonymous" defer></script>
     <style>
         
     </style>
@@ -165,27 +166,32 @@
 
         <section id="contact" class="contact">
                 <div class="social">
-                <a href="https://github.com/Kashaan-M" id="profile-link" class="profile-link"  target="_blank"><img class="icons" src="./imgs/social-1_logo-github.svg">
+                <a href="https://github.com/Kashaan-M" id="profile-link" class="profile-link"  target="_blank"><i class="fa-brands fa-github fa-5x"></i>
                 GitHub</a>
                 </div>
   
                 <div class="social">
-                <a href="https://codepen.io/kashaan-mahmood" id="profile-link" class="profile-link" target="_blank"><img class="icons" src="./imgs/social-1_logo-codepen.svg">
+                <a href="https://codepen.io/kashaan-mahmood" id="profile-link" class="profile-link" target="_blank"><i class="fa-brands fa-codepen fa-5x"></i>
                 CodePen</a>
                 </div>
 
                 <div class="social">
-                <a href="https://www.linkedin.com/in/kashaan-mahmood-63a496a4/" id="profile-link" class="profile-link" target="_blank"><img class="icons" src="./imgs/social-1_logo-linkedin.svg">
+                <a href="https://www.linkedin.com/in/kashaan-mahmood-63a496a4/" id="profile-link" class="profile-link" target="_blank"><i class="fa-brands fa-linkedin fa-5x"></i>
                 LinkedIn</a>
-              </div>
+                </div>
 
                 <div class="social">
-                <a href="#" id="profile-link" class="profile-link" target="_blank"></a><img class="icons" src="./imgs/social-1_logo-email.svg">
-                <p id ="email">kashaanmahmood@gmail.com</p></a>
+                    <a href="https://www.codecademy.com/profiles/kashaanMahmood" id="profile-link" class="profile-link" target="_blank"><img src="./imgs/codecademy.svg" alt="codecademy" class="icons codeCademy"></a>
+                </div>
+
+
+                <div class="social">
+                <a href="#" id="profile-link" class="profile-link" target="_blank"></a><i class="fa-solid fa-at fa-5x"></i>
+                kashaanmahmood@gmail.com</a>
                 </div>
                 <div class="social">
-                <a href="#" id="profile-link" class="profile-link" target="_blank"></a><img class="icons" src="./imgs/social-1_logo-mobile.svg">
-                <p id ="number">+923440507057</p></a>
+                <a href="#" id="profile-link" class="profile-link" target="_blank"></a><i class="fa-solid fa-phone-flip fa-5x"></i>
+                +923440507057</a>
                 </div>
           </section>
     </main>
